tests/snapshots/mutations__a-verb-normalizes-when-the-style-says-so.snap
---
source: tests/mutations.rs
description: qctl start DEMO-002
---
# -18 +15
 # yaml-language-server: $schema=./schema/tasks.schema.json
 schema_version: 4
 prefix: DEMO
 
 style:
   normalize_on_write: true
 
-active: DEMO-001
+active: DEMO-002
 queue:
+  - id: DEMO-002
+    title: Second
+    scope: demo
+    outcome: Something else is true.
+    blocked_by: []
+    acceptance: [It also holds.]
 
   - id: DEMO-001
     title: First
     scope: demo
     outcome: Something is true.
     blocked_by: []
     acceptance: [It holds.]
-
-  - id: DEMO-002
-    title: Second
-    scope: demo
-    outcome: Something else is true.
-    blocked_by: []
-    acceptance: [It also holds.]
 archive:
-  - id: DEMO-000
-    title: Oldest
+  - id: DEMO-100
+    title: Newer, and written second
     scope: demo
-    completed: 2026-08-14T09:00:00
-    outcome: It shipped.
+    completed: 2026-08-16T23:08:28
+    outcome: It shipped too.
     evidence: [The tag exists.]
     disposition: completed
 
-  - id: DEMO-100
-    title: Newer, and written second
+  - id: DEMO-000
+    title: Oldest
     scope: demo
-    completed: 2026-08-16T23:08:28
-    outcome: It shipped too.
+    completed: 2026-08-14T09:00:00
+    outcome: It shipped.
     evidence: [The tag exists.]
     disposition: completed
 horizon: []
-
-
