tests/snapshots/mutations__add-a-horizon-row.snap
---
source: tests/mutations.rs
description: "qctl add --title \"Find the missing fact\" --scope demo --outcome \"The question has an answer.\" --horizon --kind research --open \"The fact is missing.\""
---
# -1 +7
 # yaml-language-server: $schema=./schema/tasks.schema.json
 schema_version: 4
 prefix: DEMO
 active: null
 queue: []
 archive: []
-horizon: []
+horizon:
+  - id: DEMO-001
+    title: Find the missing fact
+    scope: demo
+    outcome: The question has an answer.
+    kind: research
+    open: The fact is missing.
