tests/snapshots/mutations__add-after-a-row.snap
---
source: tests/mutations.rs
description: "qctl add --title Middle --scope demo --outcome \"It sits after the first.\" --acceptance \"It holds.\" --after DEMO-001"
---
# -0 +8
 # yaml-language-server: $schema=./schema/tasks.schema.json
 schema_version: 4
 prefix: DEMO
 active: DEMO-001
 
 queue:
   - id: DEMO-001
     title: First
     scope: demo
     outcome: First outcome.
     blocked_by: []
     acceptance:
       - It holds.
 
+  - id: DEMO-003
+    title: Middle
+    scope: demo
+    outcome: It sits after the first.
+    blocked_by: []
+    acceptance:
+      - It holds.
+
   - id: DEMO-002
     title: Second
     scope: demo
     outcome: Second outcome.
     blocked_by: [DEMO-001]
     acceptance: [It also holds.]
 archive: []
 horizon: []
