tests/snapshots/mutations__add-with-a-blocker.snap
---
source: tests/mutations.rs
description: "qctl add --title Third --scope demo --outcome \"A third thing is true.\" --acceptance \"It holds too.\" --blocked-by DEMO-002"
---
# -0 +9
 # yaml-language-server: $schema=./schema/tasks.schema.json
 schema_version: 4
 prefix: DEMO
 active: DEMO-001
 
 queue:
   - id: DEMO-001
     title: First
     scope: demo
     outcome: First outcome.
     blocked_by: []
     acceptance:
       - It holds.
 
   - id: DEMO-002
     title: Second
     scope: demo
     outcome: Second outcome.
     blocked_by: [DEMO-001]
     acceptance: [It also holds.]
+
+  - id: DEMO-003
+    title: Third
+    scope: demo
+    outcome: A third thing is true.
+    blocked_by:
+      - DEMO-002
+    acceptance:
+      - It holds too.
 archive: []
 horizon: []
