tests/snapshots/mutations__add-with-notes.snap
---
source: tests/mutations.rs
description: "qctl add --title \"Teach it to write\" --scope demo --outcome \"The file comes back as it went in.\" --acceptance \"It holds.\" --note \"The evidence lives here.\""
---
# -1 +10
 # yaml-language-server: $schema=./schema/tasks.schema.json
 schema_version: 4
 prefix: DEMO
 active: null
-queue: []
+queue:
+  - id: DEMO-001
+    title: Teach it to write
+    scope: demo
+    outcome: The file comes back as it went in.
+    blocked_by: []
+    acceptance:
+      - It holds.
+    notes:
+      - The evidence lives here.
 archive: []
 horizon: []
