tests/snapshots/mutations__archive-clears-one-of-two-blockers.snap
---
source: tests/mutations.rs
description: "qctl archive DEMO-001 --evidence \"It shipped.\""
---
# -10 +11
 # yaml-language-server: $schema=./schema/tasks.schema.json
 schema_version: 4
 prefix: DEMO
-active: DEMO-001
+active: DEMO-002
 
 queue:
-  - id: DEMO-001
-    title: First
-    scope: demo
-    outcome: Something is true.
-    blocked_by: []
-    acceptance: [It holds.]
-
   - id: DEMO-002
     title: Second
     scope: demo
     outcome: Something else is true.
     blocked_by: []
     acceptance: [It also holds.]
 
   - id: DEMO-003
     title: Third, waiting on both
     scope: demo
     outcome: A third thing is true.
-    blocked_by: [DEMO-001, DEMO-002]
+    blocked_by: [DEMO-002]
     acceptance: [It holds too.]
-archive: []
+archive:
+  - id: DEMO-001
+    title: First
+    scope: demo
+    outcome: Something is true.
+    completed: [NOW]
+    evidence:
+      - It shipped.
+    disposition: completed
 horizon: []
